namespace MediaSearch.Models;

public interface IMediaMovie : IMedia {


}
